--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -40,6 +40,10 @@
             <button class="btn btn-lg btn-primary" type="submit">
                 Sign in
             </button>
+
+            <div class=" mt-3">
+                <a href="{{ path('app_forgot_password_request') }}" class="fw-bold">Forgot your password ?</a>
+            </div>
         </form>
     </div>
 
